<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginStart="20dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="31sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.example.krishimitra.GradientTextView
        android:id="@+id/KrishiMitra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/krishimitratitle"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/LoginDesc"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/KrishiMitra"
        android:text="@string/logindesc"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/OTPDeclaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/otpdeclaration"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginDesc" />

    <TextView
        android:id="@+id/OTPdesc"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/otpdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OTPDeclaration"
        android:textSize="17sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/phoneNumberDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OTPdesc" />
    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/otp_box_background"
            android:imeOptions="actionNext"
            android:importantForAccessibility="no"/>

        <EditText
            android:id="@+id/otp2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/otp_box_background"
            android:imeOptions="actionNext"
            android:layout_marginStart="20dp"
            android:importantForAccessibility="no"
            />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/otp_box_background"
            android:imeOptions="actionNext"
            android:layout_marginStart="20dp"
            android:importantForAccessibility="no"
            />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/otp_box_background"
            android:imeOptions="actionDone"
            android:layout_marginStart="20dp"
            android:importantForAccessibility="no"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/OTPnotRecieved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="did not recieve OTP ?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpContainer"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textColor="#FFFFFF"/>
    <TextView

        android:id="@+id/myTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onTextButtonClick"
        android:layout_marginStart="10dp"
        android:minHeight="48dp"

        android:text="Resend OTP"
        android:textColor="#E9890A"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/OTPnotRecieved"
        app:layout_constraintTop_toTopOf="@+id/OTPnotRecieved" />

    <TextView
        android:id="@+id/otpTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="5:00"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpContainer" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#007AFF"
        android:background="@drawable/input_field_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpTimer" />



</androidx.constraintlayout.widget.ConstraintLayout>
